Use Java8 stream in org.sonar.server.platform.monitoring.SonarQubeMonitor